2003-02-21  Bob Wilson  <bob.wilson@acm.org>

	* doc/as.texinfo: Define new COFF-ELF variable to conditionalize text
	relevant to both COFF and ELF.  Fix obvious typos and texinfo bugs.
	Capitalize section headings consistently.  Format index entries more
	consistently.  Unconditionalize text about whether text and data
	sections are alterable.  Use @ifnottex for alternatives to @tex output
	so that HTML works.  Clean up COFF vs. ELF descriptions of .section,
	.size and .type directives.  Be more polite about bad bug reports.
	Move FDL into a separate file.
	* doc/fdl.texi: New file.

2003-02-21  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (prev_reloc_op_frag): New variable.
	(macro): Check it to decide whether a new frag is needed.
	(my_getSmallExpression): Set it.

2003-02-20  jmc  <jmc@prioris.mini.pw.edu.pl>

	* cgen.c: Fix typo: intial -> initial.

2003-02-19  Jie Zhang  <zhangjie@magima.com.cn>

	* app.c (do_scrub_chars): Handle '||' in two states.

2003-02-13  Alan Modra  <amodra@bigpond.net.au>

	* write.c (TC_FORCE_RELOCATION_SUB_SAME): Revert last change.
	* config/tc-s390.h (TC_FORCE_RELOCATION_SUB_SAME): Define.

2003-02-11  Uwe Stieber  <uwe@wwws.de>

	* configure.in: Add support for kaOS as cross build target system.
	* configure: Regenerated.

2003-02-10  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (md_begin): If the Maverick co-processor is
	selected, set the EF_ARM_MAVERICK_FLOAT flag and
	bfd_mach_arm_ep9312 machine number.

2003-02-08  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (reloc_needs_lo_p): New function.
	(fixup_has_matching_lo_p): New function.
	(append_insn): Use reloc_needs_lo_p to check whether a relocation
	might need a matching %lo().  Reuse the head of mips_hi_fixup_list
	if that fixup already has a matching %lo().  Don't call frag_wane here.
	(macro): Call frag_wane here if the last unmatched hi was in the
	current frag.
	(pic_need_relax): New function, split out from...